# datasetmanager

./: .gitignore  Enhanced-PRD.md  FEATURE_PROGRESS_UPDATE.md  Feature-Progress.md  LICENSE  README.md  pyproject.toml
.github/workflows/: performance-benchmarks.yml
airflow/: __init__.py
airflow/dags/: dataset_etl_pipeline.py
app/integrations/: s3_storage.py  storage_factory.py
dataset-manager/: .dockerignore  .env.prod  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  verify_refactor.py
dataset-manager/airflow/dags/: __init__.py
dataset-manager/app/: auth_utils.py  cassandra_client.py  main.py
dataset-manager/app/api/: __init__.py  admin.py  auth.py  datasets.py  dependencies.py  health.py  permissions.py  rows.py
dataset-manager/app/core/: config.py  exceptions.py  masking.py  security.py
dataset-manager/app/integrations/: __init__.py  kafka_consumer.py  kafka_producer.py  local_storage.py  redis_cache.py  s3_storage.py
dataset-manager/app/middleware/: rate_limit_audit.py
dataset-manager/app/monitoring/: __init__.py  grafana_config.py  metrics.py
dataset-manager/app/schemas/: common.py
dataset-manager/app/services/: batch_service.py  dataset_service.py  pagination_cache.py  permission_service.py  schema_service.py
dataset-manager/app/utils/: log_formatter.py
dataset-manager/monitoring/grafana/provisioning/dashboards/: api-performance.json  dashboards.yml  etl-pipeline.json  infrastructure-health.json
dataset-manager/monitoring/prometheus/: prometheus.yml
dataset-manager/scripts/: generate_dashboards.py  init_cassandra.py  migrate_schema_v3.py  migrate_v2.py
dataset-manager/tests/: conftest.py  performance_benchmarks.py
dataset-manager/tests/integration/: test_api_datasets.py
dataset-manager/tests/integration/integration/: test_release2_components.py
dataset-manager/tests/unit/: test_batch_service.py  test_masking.py  test_pagination_cache.py  test_schema_service.py  test_services.py
frontend/: .env.development  .env.production  Dockerfile  README.md  index.html  package.json  tsconfig.json
frontend/src/: main.tsx  router.tsx  vite-env.d.ts
frontend/src/api/: admin.api.ts  auth.api.ts  axios.ts  datasets.api.ts
frontend/src/components/common/: LoadingSpinner.tsx  ProtectedRoute.tsx
frontend/src/components/data/: DataVisualization.tsx
frontend/src/components/layout/: AppLayout.tsx  Header.tsx
frontend/src/store/: index.ts
frontend/src/theme/: theme.ts
frontend/src/types/: common.types.ts  dataset.types.ts  user.types.ts
tests/integration/: test_release2_components.py
(+9 files in other folders)
